[package]
name = "port-scanner"
version = "0.1.0"
authors = ["kflange <zknsftk1msrk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.22.0"
rayon = "1.1.0"
log = "0.4.6"
env_logger = "0.6.2"
failure = "0.1.5"
